@@ -39,6 +39,7 @@ software-store (0.3.0) UNRELEASEDkarmic; urgency=low
       or not
   * help updates (thanks to Matthew Paul Thomas)
   * make the progress bar less cramped (LP: #426281)
+  * make default icon size in category view 48px
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 08 Sep 2009 11:23:58 +0200
 
